sign in registration changes

--- a/src/Web/DamaWeb/Pages/Account/ForgotPasswordConfirmation.cshtml
+++ b/src/Web/DamaWeb/Pages/Account/ForgotPasswordConfirmation.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Confirmação de password!";
 }
 
-<h2>@ViewData["Title"]</h2>
+<h2 class="dama-heading-normal-font">@ViewData["Title"]</h2>
 <p>
     Por favor confirme o seu email para recuperar a sua password.
 </p>
