--- a/src/Web/DamaWeb/Pages/Account/ResetPasswordConfirmation.cshtml
+++ b/src/Web/DamaWeb/Pages/Account/ResetPasswordConfirmation.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Confirmação de recuperação de password";
 }
 
-<h2>@ViewData["Title"]</h2>
+<h2 class="dama-heading-normal-font">@ViewData["Title"]</h2>
 <p>
     A sua password foi recuperada. Por favor <a asp-page="./Signin">clique aqui para fazer login</a>.
 </p>
