--- a/src/Web/DamaWeb/Pages/Account/ConfirmEmail.cshtml
+++ b/src/Web/DamaWeb/Pages/Account/ConfirmEmail.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Confirmação de Email";
 }
 
-<h2>@ViewData["Title"]</h2>
+<h2 class="dama-heading-normal-font">@ViewData["Title"]</h2>
 <div>
     <p>
         Obrigado por confirmar o seu email.
