--- a/src/Web/DamaWeb/Pages/Account/Signin.cshtml
+++ b/src/Web/DamaWeb/Pages/Account/Signin.cshtml
@@ -83,11 +83,13 @@
                         <input asp-for="UserDetails.SubscribeNewsletter" class="form-check-input">
                         <label class="form-check-label small" asp-for="UserDetails.SubscribeNewsletter"></label>
                     </div>
-                    @*<div class="form-group form-check">
-                        <input asp-for="UserDetails.AcceptConditions" class="form-check-input">
-                        <label class="form-check-label small" asp-for="UserDetails.AcceptConditions"></label>
-                        <span asp-validation-for="UserDetails.AcceptConditions" class="text-danger"></span>
-                    </div>*@
+                    <div class="form-group">
+                        <div class="form-check">
+                            <input asp-for="UserDetails.AgreeToTerms" class="form-check-input" />
+                            <label asp-for="UserDetails.AgreeToTerms" class="form-check-label small"></label>
+                        </div>
+                        <span asp-validation-for="UserDetails.AgreeToTerms" class="text-danger"></span>
+                    </div>
                     <button type="submit" class="esh-catalog-button btn btn-default btn-brand btn-brand-big">&nbsp;REGISTAR&nbsp;</button>
 
                 </form>
@@ -98,38 +100,4 @@
 
 @section Scripts {
     @{ await Html.RenderPartialAsync("_ValidationScriptsPartial"); }
-
-    <script type="text/javascript">
-
-     $(function () {
-
-         //$.validator.addMethod('booleanrequired',
-
-         //    function (value, element, params) {
-         //        // Get element value. Classic genre has value '0'.
-         //        debugger;
-         //        //var genre = $(params[0]).val(),
-         //        //    year = params[1],
-         //        //    date = new Date(value);
-         //        //if (genre && genre.length > 0 && genre[0] === '0') {
-         //        //    // Since this is a classic movie, invalid if release date is after given year.
-         //        //    return date.getFullYear() <= year;
-         //        //}
-
-         //        return true;
-
-         //    });
-
-
-
-         //$.validator.unobtrusive.adapters.add('booleanrequired',
-         //    ['year'],
-         //    function (options) {
-         //        var element = $(options.form).find('select#Genre')[0];
-         //        options.rules['booleanrequired'] = [element, parseInt(options.params['year'])];
-         //        options.messages['booleanrequired'] = options.message;
-         //    });
-     });
-
-    </script>
 }
