--- a/src/Web/DamaWeb/Pages/Shared/_LoginPartial.cshtml
+++ b/src/Web/DamaWeb/Pages/Shared/_LoginPartial.cshtml
@@ -35,7 +35,7 @@ else
     <li class="nav-item list-inline-item">
         <a asp-page="/Account/Signin" class="nav-link px-0 px-sm-3">
             <i class="fas fa-user fa-lg"></i>
-            <span class="d-none d-sm-inline">Login</span>
+            <span class="d-none d-sm-inline">Entrar</span>
         </a>
     </li>
     <li class="list-inline-item">
