--- a/src/Web/DamaWeb/Pages/Account/Signin.cshtml
+++ b/src/Web/DamaWeb/Pages/Account/Signin.cshtml
@@ -86,7 +86,7 @@
                     <div class="form-group">
                         <div class="form-check">
                             <input asp-for="UserDetails.AgreeToTerms" class="form-check-input" />
-                            <label asp-for="UserDetails.AgreeToTerms" class="form-check-label small"></label>
+                            <label asp-for="UserDetails.AgreeToTerms" class="form-check-label small">Declaro que li e aceito os <a class="link-dama-menta" href="https://www.damanojornal.com/termos-e-condicoes/" target="_blank">Termos de Serviço</a>.</label>
                         </div>
                         <span asp-validation-for="UserDetails.AgreeToTerms" class="text-danger"></span>
                     </div>
