--- a/src/Web/DamaWeb/Pages/Basket/Index.cshtml
+++ b/src/Web/DamaWeb/Pages/Basket/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@page 
 @model IndexModel
 @{
-    ViewData["Title"] = "Basket";
+    ViewData["Title"] = "Carrinho";
 }
 <h2 class="dama-heading-normal-font">Carrinho</h2>
 @*<div class="container">*@
