--- a/src/Web/DamaWeb/Pages/Error.cshtml
+++ b/src/Web/DamaWeb/Pages/Error.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model ErrorModel
 @{
-    ViewData["Title"] = "Erro";
+    ViewData["Title"] = "Ops";
 }
 <div class="row">
     <div class="offset-sm-3 col-sm-6">
