--- a/src/Web/DamaWeb/Pages/Shared/_Layout.cshtml
+++ b/src/Web/DamaWeb/Pages/Shared/_Layout.cshtml
@@ -1,6 +1,14 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    @if (ViewBag.NoIndex != null)
+    {
+        <meta name="robots" content="noindex" />
+    }
+    <title>Loja - @ViewData["Title"]</title>
+
     <environment names="Production">
         <!-- Global site tag (gtag.js) - Google Analytics -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=UA-112025066-1"></script>
@@ -12,14 +20,6 @@
             gtag('config', 'UA-112025066-1');
         </script>
     </environment>
-
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    @if (ViewBag.NoIndex != null)
-    {
-        <meta name="robots" content="noindex" />
-    }
-    <title>@ViewData["Title"] - Loja</title>
 
     <environment names="Development">
         <link href="~/lib/slick/slick.css" rel="stylesheet" />
@@ -144,6 +144,9 @@
                     </div>
                     <div class="footer-link text-center text-nowrap">
                         <a href="https://www.damanojornal.com/termos-e-condicoes/">Termos e Condições</a>
+                    </div>
+                    <div class="footer-link text-center text-nowrap">
+                        <a href="https://www.damanojornal.com/politica-de-privacidade/">Política de Privacidade</a>
                     </div>
                     <div class="text-center">
                         <a href="https://www.facebook.com/damanojornal/" class="px-2" target="_blank"><i class="fab fa-facebook-f fa-inverse"></i></a>
