--- a/src/Web/Backoffice/Pages/ProductType/Create.cshtml
+++ b/src/Web/Backoffice/Pages/ProductType/Create.cshtml
@@ -40,6 +40,12 @@
                 <span asp-validation-for="ProductTypeModel.AdditionalTextPrice" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="ProductTypeModel.FormFileTextHelpers" class="control-label"></label>
+                <input type="file" asp-for="ProductTypeModel.FormFileTextHelpers" class="form-control" multiple />
+                <small>(se mais que uma foto, o utilizador terá que escolher uma)</small>
+                <span asp-validation-for="ProductTypeModel.FormFileTextHelpers" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="ProductTypeModel.ShippingCost" class="control-label"></label>
                 <input asp-for="ProductTypeModel.ShippingCost" class="form-control decimal" />
                 <span asp-validation-for="ProductTypeModel.ShippingCost" class="text-danger"></span>
