--- a/src/Web/Backoffice/Pages/Account/Login.cshtml
+++ b/src/Web/Backoffice/Pages/Account/Login.cshtml
@@ -34,9 +34,39 @@
                 </div>
             </form>
         </section>
-    </div>    
+    </div>   
+    <div class="col-md-4">        
+        <section>
+            <h4>Use a tua conta de Facebook ou Google para Entrar.</h4>
+            @{
+                if ((Model.ExternalLogins?.Count ?? 0) == 0)
+                {
+                    <div>
+                        <p>
+                            There are no external authentication services configured. See <a href="https://go.microsoft.com/fwlink/?LinkID=532715">this article</a>
+                            for details on setting up this ASP.NET application to support logging in via external services.
+                        </p>
+                    </div>
+                }
+                else
+                {
+                    <form asp-page="./ExternalLogin" asp-route-returnUrl="@ViewData["ReturnUrl"]" method="post" class="form-horizontal">
+                        <div>
+                            <p>
+                                @foreach (var provider in Model.ExternalLogins)
+                                {
+                                    
+                                    <button type="submit" class="btn btn-default" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.DisplayName</button>
+                                    
+                                }
+                            </p>
+                        </div>
+                    </form>
+                }
+            }
+        </section>
+    </div>
 </div>
-
 @section Scripts {
     @await  Html.PartialAsync("_ValidationScriptsPartial")
 }
