--- a/src/Web/Backoffice/Pages/Account/Login.cshtml
+++ b/src/Web/Backoffice/Pages/Account/Login.cshtml
@@ -35,7 +35,7 @@
             </form>
         </section>
     </div>   
-    <div class="col-md-4">        
+    @*<div class="col-md-4">        
         <section>
             <h4>Use a tua conta de Facebook ou Google para Entrar.</h4>
             @{
@@ -65,7 +65,7 @@
                 }
             }
         </section>
-    </div>
+    </div>*@
 </div>
 @section Scripts {
     @await  Html.PartialAsync("_ValidationScriptsPartial")
