--- a/src/Web/DamaWeb/wwwroot/css/app.css
+++ b/src/Web/DamaWeb/wwwroot/css/app.css
@@ -729,7 +729,7 @@ hr {
 .btn-social :first-child {
     position: absolute;
     left: 0;
-    top: 4px;
+    top: 0;
     bottom: 0;
     width: 40px;
     padding: 7px;
