--- a/src/Web/DamaWeb/Pages/Product/_productDetail.cshtml
+++ b/src/Web/DamaWeb/Pages/Product/_productDetail.cshtml
@@ -1,5 +1,11 @@
 ﻿@model ProductViewModel
 
+<style>
+    #btnSub, #btnAdd {
+        cursor: pointer;
+    }
+</style>
+
 <form asp-page="/Basket/Index" asp-page-handler="addtobasket" method="post">
     <div class="dama-product-title">@Model.ProductTitle</div>
     <div class="row justify-content-center mt-3 mt-md-3">
@@ -11,12 +17,12 @@
         <img class="separator" src="~/images/barra-coracao.png" />
     </div>
 
-    <div class="row dama-product-attr mb-2 mb-md-3" >
+    <div class="row dama-product-attr mb-2 mb-md-3 ">
         <label class="col-4 col-form-label">Quantidade</label>
-        <div class="col-8 btn-group w-100" role="group">
-            <button id="btnSub" type="button" class="btn">-</button>
-            <input asp-for="ProductQuantity" class="form-control col-2 text-center">
-            <button id="btnAdd" type="button" class="btn">+</button>
+        <div class="col-8 btn-group w-100 align-items-center" role="group">
+            <i id="btnSub" class="fas fa-chevron-down mr-2" role="button"></i>
+            <input asp-for="ProductQuantity" class="form-control col-3 text-center">
+            <i id="btnAdd" class="fas fa-chevron-up ml-2" role="button"></i>
         </div>
     </div>
 
@@ -44,54 +50,98 @@
             </div>
         </div>
     }
-
-
-    @if (Model.CustomizePrice.HasValue && Model.CustomizePrice.Value > 0)
-    {
-        <div class="row align-items-center mb-4 mt-4">
-            <div class="col-12 col-md-7 dama-customize-question mb-2 mb-sm-0">Queres personalizar com um nome?</div>
-            <div class="col-12 col-md-5">
-                <a class="btn btn-dama-menta w-100" role="button" data-toggle="collapse" href="#addName">ADICIONAR NOME</a>
-            </div>
-            <small id="nameInputText" class="text-muted ml-3 dama-small-text"></small>
-
+    <div class="row">
+        <div class="col">
+            <small>Se ficaste com alguma dúvida, envia-nos <a href="#sendMessageSection" data-toggle="collapse" class="link-dama-black"> uma mensagem aqui.</a></small>
         </div>
-        <div id="addName" class="collapse mb-4">
-            <div class="ml-3 ml-md-5">
-                <div class="form-group mb-0">
-                    <label for="exampleInputEmail1">Nome ou Frase</label>
-                </div>
-                <div class="form-group row">
-                    <div class="col-7">
-                        <input asp-for="NameInput" class="form-control dama-product-input" placeholder="escreve aqui" />
-                        <span asp-validation-for="NameInput" class="text-danger"></span>
-
-                    </div>
-                    <div class="col-5 col-md-4">
-                        <a id="saveName" class="btn btn-primary rounded-0 w-100" role="button" data-toggle="collapse" href="#addName">GRAVAR</a>
-                    </div>
-                    <div class="col">
-                        <small class="text-muted dama-small-text">*Esta personalização tem um custo adicional de @Model.CustomizePrice.Value.ToString().Replace('.', ',')€</small>
-                    </div>
-                </div>
-            </div>
-
+    </div>
+    <div id="sendMessageSection" class="collapse border border-menta mt-2">
+        <div class="form-group dama-product-attr mx-2">
+            <label asp-for="ContactEmailAddress" class="col-form-label"></label>
+            <input asp-for="ContactEmailAddress" class="form-control" />
         </div>
-        <hr />
-    }
+        <div class="form-group dama-product-attr mx-2">
+            <label asp-for="Message" class="col-form-label"></label>
+            <textarea asp-for="Message" class="form-control"></textarea>
+        </div>
+        <button type="submit" asp-page="/Product/Index" asp-page-handler="SendMessage" class="btn btn-dama-menta ml-2 mb-2">Enviar</button>
+    </div>
+
+    <div class="row mt-4 w-100">
+        <input class="dama-product-add ml-2 w-100" type="submit" value="ADICIONAR AO CARRINHO" />
+        @if (Model.CanCustomize)
+        {
+            <a id="btnCustomize" class="btn btn-outline-pink ml-2 mt-2 w-100" role="button" data-toggle="collapse" href="#customizeSection">AQUI PODES PERSONALIZAR</a>
+        }
+    </div>
+    <small id="txtDeliveryStockTime" class="text-muted dama-small-text my-3">Tempo de entrega entre 2 a 3 dias úteis para produtos em stock.</small>
+
     @if (Model.CanCustomize)
     {
-        <div class="row mb-4 mb-md-3 align-items-center">
-            <div class="col-12 col-md-7 dama-customize-question  mb-2 mb-sm-0">Queres uma personalização total?</div>
-            <div class="col-12 col-md-5">
-                <a class="btn btn-dama-menta w-100 text-white" role="button" asp-page="/Customize/Index">PERSONALIZAR</a>
-            </div>
+    <div id="customizeSection" class="collapse my-4">
+        <div class="text-center">PERSONALIZAR</div>
+        <div class="text-center mb-3">
+            <small>(Escolhe uma opção)</small>
         </div>
+        @if (Model.CanCustomizeName)
+        {
+            <div class="row mb-2">
+                <div class="col-12 col-md-8 dama-customize-question mb-2 mb-sm-0">
+                    &#9679; Queres acrescentar um nome/frase?
+                </div>
+                <div class="col-12 col-md-4">
+                    <a id="btnAddName" class="btn btn-dama-menta btn-dama-sm w-100" role="button" data-toggle="collapse" href="#addName">ADICIONAR</a>
+                </div>
+            </div>
+            @*<small id="nameInputText" class="text-muted ml-3 dama-small-text"></small>*@
+            <div id="addName" class="collapse">
+                <div class="col mb-4 border border-menta px-4 pt-3">
+                    <div class="form-group row">
+                        <label class="col-form-label dama-customize-question">1 - Nome ou Frase</label>
+                        <div class="col">
+                            <input asp-for="NameInput" class="form-control dama-product-input" placeholder="escreve aqui" />
+                            <span asp-validation-for="NameInput" class="text-danger"></span>
+                        </div>
+                    </div>
+                    @if (Model.PictureHelpers?.Count > 0)
+                    {
+                        <div class="form-group row">
+                            <label class="col-form-label dama-customize-question">2 - Escolhe uma opção</label>
+                        </div>
+                        <div id="divSelectImage" class="form-group row">
+                            @foreach (var item in Model.PictureHelpers)
+                            {
+                                <div class="col" fileName="@item.PictureFileName"><img src="@item.PictureUri" alt="Dama no Jornal" class="img-thumbnail" /></div>
+                            }
+                        </div>@*<div class="col-5 col-md-4">
+                <a id="saveName" class="btn btn-primary rounded-0 w-100" role="button" data-toggle="collapse" href="#addName">GRAVAR</a>
+            </div>*@
+
+                    }
+
+                    <div class="row">
+                        <small class="text-muted dama-small-text">
+                            *Esta personalização tem um custo adicional de @Model.CustomizePrice.Value.ToString().Replace('.', ',')€<br />
+                            e um prazo de entrega de @Model.DeliveryTimeMin a @Model.DeliveryTimeMax @(DamaWeb.Extensions.EnumHelper<ApplicationCore.Entities.DeliveryTimeUnitType>.GetDisplayValue(Model.DeliveryTimeUnit)).
+                        </small>
+                    </div>
+                </div>
+                <input class="dama-product-add w-100" type="submit" value="ADICIONAR AO CARRINHO" />
+            </div>            
+        }
+        @if (Model.CanCustomizeTotal)
+        {
+            <div id="divCustomizeTotal" class="row mb-4 mb-md-3 align-items-center">
+                <div class="col-12 col-md-8 dama-customize-question  mb-2 mb-sm-0">&#9679; Queres uma ilustração personalizada?</div>
+                <div class="col-12 col-md-4">
+                    <a class="btn btn-dama-menta w-100 text-white" role="button" asp-page="/Customize/Index">PERSONALIZAR</a>
+                </div>
+            </div>
+        }
+    </div>
     }
 
-    <div class="mt-md-4 w-100">        
-        <input class="dama-product-add ml-2 w-100" type="submit" value="ADICIONAR AO CARRINHO" />
-    </div>
+
 
     <div class="text-center my-3 my-sm-3">
         <img class="separator" src="~/images/barra-coracao.png" />
@@ -99,8 +149,8 @@
 
     <p class="dama-product-description my-3 my-sm-3">@Html.Raw(Model.ProductDescription)</p>
 
-    @*<small class="text-muted dama-small-text my-3">Tempo de entrega entre @Model.DeliveryTimeMin a @Model.DeliveryTimeMax @(DamaWeb.Extensions.EnumHelper<ApplicationCore.Entities.DeliveryTimeUnitType>.GetDisplayValue(Model.DeliveryTimeUnit)) para produtos em stock.</small>*@
-    <small class="text-muted dama-small-text my-3">Tempo de entrega entre 2 a 3 dias para produtos em stock.</small>
+    
+
 
     <hr />
     <div class="row dama-product-attr mt-2 mt-md-4">
@@ -135,4 +185,5 @@
     <input type="hidden" asp-for="ProductId" />
     <input type="hidden" asp-for="ProductPrice" />
     <input type="hidden" asp-for="CustomizePrice" />
+    <input type="hidden" asp-for="CustomizePictureFileName" />
 </form>
