fix customize link in product detail

--- a/src/Web/DamaWeb/Pages/Customize/Index.cshtml
+++ b/src/Web/DamaWeb/Pages/Customize/Index.cshtml
@@ -103,6 +103,7 @@
                 <text>
             var productElem = $('.product-types').find("[catalog-type-id='@Model.CustomizeModel.CatalogItemId.Value']");
             selectProduct(productElem);
+            $('.go-section').removeClass("sr-only");
                 </text>
             }
         });
