--- a/src/Web/DamaWeb/Pages/Product/_productDetail.cshtml
+++ b/src/Web/DamaWeb/Pages/Product/_productDetail.cshtml
@@ -134,7 +134,7 @@
             <div id="divCustomizeTotal" class="row mb-4 mb-md-3 align-items-center">
                 <div class="col-12 col-md-8 dama-customize-question  mb-2 mb-sm-0">&#9679; Queres uma ilustração personalizada?</div>
                 <div class="col-12 col-md-4">
-                    <a class="btn btn-dama-menta w-100 text-white" role="button" asp-page="/Customize/Index">PERSONALIZAR</a>
+                    <a class="btn btn-dama-menta w-100 text-white" role="button" asp-page="/Customize/Index" asp-route-CategoryId="@Model.CategoryId" asp-route-CatalogItemId="@Model.ProductTypeId" asp-fragment="produtos">PERSONALIZAR</a>
                 </div>
             </div>
         }
